...
                    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/age" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etAge"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="number" android:text="35" />
...
                        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/dependents" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etDependents"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="number" android:text="1" />
...
                    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/monthly_income" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etIncome"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="numberDecimal" android:text="7500" />
...
                        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/monthly_expenses" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etExpenses"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="numberDecimal" android:text="3000" />
...
                        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/credit_score_label" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etCreditScore"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="number" android:text="720" />
...
                    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/loan_amount" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etLoanAmount"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="numberDecimal" android:text="50000" />
...
                        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/loan_term" style="@style/Widget.SmartLoan.TextInput">
                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etLoanTerm"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:inputType="number" android:text="36" />
...
                        android:visibility="gone" />
                    <View android:layout_width="@dimen/spacing_sm" android:layout_height="1dp" />
                    <com.google.android.material.button.MaterialButton android:id="@+id/btnNext"
                        android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                        android:text="@string/next" />
...

        <!-- Results Section -->
        <LinearLayout android:id="@+id/resultsContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_md" android:visibility="gone">
...
